--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react",
     "react-component"
   ],
-  "contributors": ["enigma.io","Joe Natalzia"],
+  "contributors": [
+    "enigma.io",
+    "Joe Natalzia"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/enigma-io/react-input-placeholder/issues"
@@ -26,5 +29,8 @@
     "grunt-contrib-jshint": "~0.7.0",
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-browserify": "~1.2.9"
+  },
+  "dependencies": {
+    "lodash.assign": "^3.2.0"
   }
 }
