--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-input-placeholder",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.1.0",
+  "description": "Input and Textarea React components with polyfilled placeholder support.",
+  "author": "Enigma Technologies <contact@enigma.io> (http://enigma.io)",
   "main": "src/react-input-placeholder.js",
   "scripts": {
     "test": "grunt lint"
@@ -16,15 +17,19 @@
     "react",
     "react-component"
   ],
-  "contributors": ["enigma.io","Joe Natalzia"],
+  "contributors": [
+    "enigma.io",
+    "Joe Natalzia",
+    "Evan Jacobs"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/enigma-io/react-input-placeholder/issues"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.7.0",
-    "grunt-contrib-uglify": "~0.2.4",
-    "grunt-browserify": "~1.2.9"
+    "grunt": "^0.4.1",
+    "grunt-contrib-jshint": "^0.7.0",
+    "grunt-contrib-uglify": "^0.2.4",
+    "grunt-browserify": "^1.2.9"
   }
 }
