--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "react-input-placeholder",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Input and Textarea React components with polyfilled placeholder support.",
   "author": "Enigma Technologies <contact@enigma.io> (http://enigma.io)",
   "main": "src/react-input-placeholder.js",
-  "scripts": {
-    "test": "grunt lint"
-  },
   "repository": {
     "type": "git",
     "url": "git://github.com/enigma-io/react-input-placeholder.git"
@@ -18,18 +15,25 @@
     "react-component"
   ],
   "contributors": [
-    "enigma.io",
     "Joe Natalzia",
-    "Evan Jacobs"
+    "Evan Jacobs <evan.jacobs@enigma.io>"
   ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/enigma-io/react-input-placeholder/issues"
   },
+  "browser": {
+    "react": "react"
+  },
   "devDependencies": {
     "grunt": "^0.4.1",
+    "grunt-browserify": "^1.2.9",
     "grunt-contrib-jshint": "^0.7.0",
     "grunt-contrib-uglify": "^0.2.4",
-    "grunt-browserify": "^1.2.9"
+    "react": "^0.13.3"
+  },
+  "scripts": {
+    "build": "grunt",
+    "test": "grunt lint"
   }
 }
